# lacy

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md  flake.nix  shell.sh  test_env.py
.github/: CODEOWNERS
.github/workflows/: book.yml  check.yml  release.yml  rust.yml  scorecard.yml  test.yml
devtools/: create_test_folder.py  shell.sh
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  features.md  install.md  introduction.md  setup.md
src/: cmd.rs  complete.rs  directory.rs  fuzzy.rs  init.rs  lib.rs  main.rs  prompt.rs  query.rs  query_part.rs  ui.rs
src/cmd/: cmd.rs  commands.rs  complete.rs  init.rs  mod.rs  prompt.rs
src/command/: cmd.rs  complete.rs  init.rs  mod.rs  prompt.rs  query.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
templates/: bash.sh  fish.fish  nu.nu  powershell.ps1  zsh.sh
tests/: integration_tests.rs
