[package]
name = "lacy"
description = "Fast magical cd alternative for lazy terminal navigators"
version = "0.2.2"
authors =  ["timothebot"]
repository = "https://github.com/timothebot/lacy"
homepage = "https://github.com/timothebot/lacy"
edition = "2021"
readme = "README.md"
license = "MIT"
exclude = [
    ".github/*",
    "test/*",
    "devtools/*"
]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dialoguer = { version = "0.11" }
