[package]
name = "lacy"
description = "Fast magical cd alternative for lazy terminal navigators"
version = "0.4.0"
authors =  ["timothebot"]
repository = "https://github.com/timothebot/lacy"
homepage = "https://github.com/timothebot/lacy"
edition = "2021"
readme = "README.md"
license = "MIT"
exclude = [
    ".github/*",
    "test/*",
    "devtools/*"
]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dialoguer = { version = "0.11" }
upon = "0.10.0"

[profile.release]
codegen-units = 1
lto = true
