[package]
name = "lacy"
description = "Fast magical cd alternative for lazy terminal navigators"
version = "0.5.1"
authors =  ["timothebot"]
repository = "https://github.com/timothebot/lacy"
homepage = "https://github.com/timothebot/lacy"
edition = "2021"
readme = "README.md"
license = "MIT"
exclude = [
    ".github/*",
    "test/*",
    "devtools/*"
]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
upon = "0.10.0"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
codegen-units = 1
lto = true
